walchl/caffe:git-nv340.65 add ldconfig to load libcudnn.so

--- a/caffe/git-nv340.65/Dockerfile
+++ b/caffe/git-nv340.65/Dockerfile
@@ -9,7 +9,8 @@ RUN apt-get update &&\
 RUN git clone https://github.com/BVLC/caffe.git ~/caffe
 ADD cudnn-6.5-linux-R1.tgz /usr/local/
 RUN ln -s /usr/local/cudnn-6.5-linux-R1/lib* /usr/local/lib/. &&\
-    ln -s /usr/local/cudnn-6.5-linux-R1/*h /usr/local/include/.
+    ln -s /usr/local/cudnn-6.5-linux-R1/*h /usr/local/include/. &&\
+    ldconfig
 RUN cd ~/caffe &&\
     cp Makefile.config.example Makefile.config &&\
     sed -i 's/^# USE_CUDNN/USE_CUDNN/' Makefile.config &&\
