--- a/cuda/6.5-nv346.59/Dockerfile
+++ b/cuda/6.5-nv346.59/Dockerfile
@@ -4,7 +4,7 @@ RUN apt-get -y install wget build-essential freeglut3-dev libx11-dev libxmu-dev 
     apt-get clean
 RUN cd /tmp &&\
     wget -q http://developer.download.nvidia.com/compute/cuda/6_5/rel/installers/cuda_6.5.14_linux_64.run &&\
-    sh cuda_6.5.14_linux_64.run -silent -toolkit &&\
+    sh cuda_6.5.14_linux_64.run -silent -toolkit --override &&\
     rm -rf *
 RUN cd /usr/local/cuda/samples/1_Utilities/deviceQuery &&\
     make &&\
