--- a/cuda/7.0-nv346.89/Dockerfile
+++ b/cuda/7.0-nv346.89/Dockerfile
@@ -1,10 +1,10 @@
-FROM walchl/nvidia-driver:346.82
+FROM walchl/nvidia-driver:346.89
 MAINTAINER "Walter Chen-Hua Lu"
 RUN apt-get -y install wget build-essential freeglut3-dev libx11-dev libxmu-dev libxi-dev libgl1-mesa-glx libglu1-mesa libglu1-mesa-dev &&\
     apt-get clean
 RUN cd /tmp &&\
     wget -q http://developer.download.nvidia.com/compute/cuda/7_0/Prod/local_installers/cuda_7.0.28_linux.run &&\
-    sh cuda_7.0.28_linux.run -silent -toolkit &&\
+    sh cuda_*_linux.run -silent -toolkit &&\
     rm -rf *
 RUN cd /usr/local/cuda/samples/1_Utilities/deviceQuery &&\
     make &&\
